mis en place de l'authentification par token + Identity + sécurisation des endpoints + test avec sans token et avec token

--- a/P7CreateRestApi/appsettings.json
+++ b/P7CreateRestApi/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=P7CreateRestApi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+
+  "Jwt": {
+    "Key": "CHANGE_ME_SUPER_SECRET_KEY_MIN_32_CHARS",
+    "Issuer": "Dot.Net.WebApi",
+    "Audience": "Dot.Net.WebApi",
+    "ExpiresMinutes": 120
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
