--- a/P7CreateRestApi/appsettings.json
+++ b/P7CreateRestApi/appsettings.json
@@ -13,7 +13,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*"
